--- a/apps/ss_twr_node/pkg.yml
+++ b/apps/ss_twr_node/pkg.yml
@@ -30,4 +30,6 @@ pkg.deps:
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@apache-mynewt-core/encoding/json"
+    
 
