Move to decawave group

--- a/apps/twr_tag/pkg.yml
+++ b/apps/twr_tag/pkg.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: apps/ss_twr_tag
+pkg.name: apps/twr_tag
 pkg.type: app
 pkg.description: Basic example application which blinks an LED.
 pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
