--- a/project.yml
+++ b/project.yml
@@ -28,12 +28,14 @@ project.repositories:
 #
 repository.apache-mynewt-core:
     type: github
-    vers: 1.2.0
+    vers: 1.3.0
     user: apache
     repo: mynewt-core
 
 repository.mynewt-dw1000-core:
     type: github
     vers: 0-dev
+    user: decawave
+    repo: mynewt-dw1000-core
     url: 'git@github.com:Decawave/mynewt-dw1000-core.git'
 
