Added DEVICE_ID to syscfg.yml to facilitate build-time configuration. You can not override defaults DEVICE_ID using the command >>$ newt target amend twr_tag syscfg=DEVICE_ID='(uint16_t){0x4321}' for example.

--- a/apps/twr_node_json/syscfg.yml
+++ b/apps/twr_node_json/syscfg.yml
@@ -3,3 +3,10 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
+
+
+syscfg.defs:
+    DEVICE_ID:
+        description: >
+            Device ID
+        value: ((uint16_t){0x1234})
