--- a/apps/twr_node/syscfg.yml
+++ b/apps/twr_node/syscfg.yml
@@ -2,5 +2,10 @@ syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
-    # Enable DW1000
     DW1000_DEVICE_0: 1
+
+syscfg.defs:
+    DEVICE_ID:
+        description: >
+            Device ID
+        value: ((uint16_t){0x1234})
