Modified example apps in keeping with the API changes of mynewt-dw1000-core.

--- a/apps/twr_node/syscfg.yml
+++ b/apps/twr_node/syscfg.yml
@@ -9,3 +9,7 @@ syscfg.defs:
         description: >
             Device ID
         value: ((uint16_t){0x1234})
+    UUID_CCP_MASTER:
+        description: >
+            Clock Master UUID
+        value: ((uint16_t){0x8000})         
