--- a/apps/twr_tag/syscfg.yml
+++ b/apps/twr_tag/syscfg.yml
@@ -3,6 +3,11 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
+    DW1000_SS_TWR_ENABLED: 0
+    DW1000_DS_TWR_ENABLED: 1
+    DW1000_DS_TWR_EXT_ENABLED: 0
+    DW1000_PAN: 1
+    DW1000_CLOCK_CALIBRATION: 1
     # OS_SYSVIEW: 1   
 
 syscfg.defs:
