--- a/apps/twr_tag_imu/syscfg.yml
+++ b/apps/twr_tag_imu/syscfg.yml
@@ -4,6 +4,12 @@ syscfg.vals:
     CONSOLE_RTT: 1
     # Enable DW1000
     DW1000_DEVICE_0: 1
+    DW1000_SS_TWR_ENABLED: 0
+    DW1000_DS_TWR_ENABLED: 1
+    DW1000_DS_TWR_EXT_ENABLED: 0
+    DW1000_PAN: 0
+    DW1000_CLOCK_CALIBRATION: 0
+
     I2C_1: 1
     # ST Mems
     LSM6DSL_ONB: 1
