--- a/apps/twr_tag/syscfg.yml
+++ b/apps/twr_tag/syscfg.yml
@@ -3,7 +3,8 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    # OS_SYSVIEW: 1   
+    # OS_SYSVIEW: 1 
+    DW1000_CLOCK_CALIBRATION: 1  
 
 syscfg.defs:
     DEVICE_ID:
