--- a/apps/twr_node/syscfg.yml
+++ b/apps/twr_node/syscfg.yml
@@ -7,6 +7,7 @@ syscfg.vals:
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
     DW1000_CLOCK_CALIBRATION: 1
+    DW1000_PAN: 0
     
 syscfg.defs:
     DEVICE_ID:
