--- a/apps/aoa_node/pkg.yml
+++ b/apps/aoa_node/pkg.yml
@@ -17,9 +17,9 @@
 # under the License.
 #
 
-pkg.name: apps/lwip_ping_rx
+pkg.name: apps/aoa_node
 pkg.type: app
-pkg.description: "Basic lwip ping example"
+pkg.description: "Basic AoA node example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
@@ -31,10 +31,13 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
-    - "@mynewt-dw1000-core/net/ip/lwip_base"
 
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
-    - "-DNRF52"
+    - "-DNRF52840_XXAA"
+    
+pkg.lflags:
+    - "-lm"
