--- a/apps/twr_node_json/syscfg.yml
+++ b/apps/twr_node_json/syscfg.yml
@@ -3,7 +3,10 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    DW1000_CLOCK_CALIBRATION: 1
+    DW1000_SS_TWR_ENABLED: 1
+    DW1000_DS_TWR_ENABLED: 1
+    DW1000_DS_TWR_EXT_ENABLED: 0
+    DW1000_CLOCK_CALIBRATION: 0
 
 syscfg.defs:
     DEVICE_ID:
