--- a/apps/twr_tag_imu/syscfg.yml
+++ b/apps/twr_tag_imu/syscfg.yml
@@ -8,6 +8,10 @@ syscfg.vals:
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
 
+    # To use SPI for dwm1002 change to the following:
+    # I2C_1: 0
+    # MEMS_ON_SPI: 1
+
     I2C_1: 1
     # ST Mems
     LSM6DSL_ONB: 1
@@ -15,3 +19,4 @@ syscfg.vals:
     LPS22HB_ONB: 1
     # Inversense
     MPU6500_ONB: 1
+    SENSOR_OIC: 0
