--- a/apps/clock_master/syscfg.yml
+++ b/apps/clock_master/syscfg.yml
@@ -6,8 +6,9 @@ syscfg.vals:
     DW1000_SS_TWR_ENABLED: 0
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
+    DW1000_CCP_ENABLED: 1
     DW1000_PAN: 0
-    DW1000_CLOCK_CALIBRATION: 1
+   
 
 syscfg.defs:
     DEVICE_ID:
