--- a/apps/twr_node_json/syscfg.yml
+++ b/apps/twr_node_json/syscfg.yml
@@ -6,7 +6,7 @@ syscfg.vals:
     DW1000_SS_TWR_ENABLED: 1
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
-    DW1000_CLOCK_CALIBRATION: 0
+    DW1000_CCP_ENABLED: 0
 
 syscfg.defs:
     DEVICE_ID:
