--- a/apps/twr_tag/syscfg.yml
+++ b/apps/twr_tag/syscfg.yml
@@ -6,6 +6,7 @@ syscfg.vals:
     DW1000_SS_TWR_ENABLED: 0
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
+    DW1000_MAC_FILTERING: 1
     DW1000_CCP_ENABLED: 1
     DW1000_PAN: 0
     # OS_SYSVIEW: 1
