Update to twr_tag/node_tdma in keeping with dw1000_phy_frame_duration changes

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -11,9 +11,11 @@ syscfg.vals:
     TIMESCALE_PROCESSING_ENABLED: 1
     ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
+    DW1000_BIAS_CORRECTION_ENABLED: 1
     DW1000_PAN: 0
     TDMA_ENABLED: 1
     OS_SYSVIEW: 0
+ 
 
 syscfg.defs:
     DEVICE_ID:
