--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -15,8 +15,10 @@ syscfg.vals:
     TIMESCALE_PROCESSING_ENABLED: 1
     ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
+    DW1000_BIAS_CORRECTION_ENABLED: 1
     TDMA_ENABLED: 1
     DW1000_PAN: 0
+
     
 syscfg.defs:
     DEVICE_ID:
