--- a/project.yml
+++ b/project.yml
@@ -29,7 +29,7 @@ project.repositories:
 #
 repository.apache-mynewt-core:
     type: github
-    vers: 1.4.1
+    vers: 0-dev
     user: apache
     repo: mynewt-core
 
