Syncing apps with driver changes.
    Created seperate pkg for the range module in the core/lib.

--- a/apps/twr_tag_range/pkg.yml
+++ b/apps/twr_tag_range/pkg.yml
@@ -32,6 +32,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@mynewt-dw1000-core/lib/range"
 
     
 pkg.cflags:
