--- a/apps/twr_node_range/pkg.yml
+++ b/apps/twr_node_range/pkg.yml
@@ -33,6 +33,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@mynewt-dw1000-core/lib/range"
 
 pkg.cflags:
     - "-std=gnu99"
