Adjusted the rx-timeout/tx-holdoff values for twr_node_range & twr_tag_range

--- a/apps/twr_node_range/syscfg.yml
+++ b/apps/twr_node_range/syscfg.yml
@@ -14,7 +14,7 @@ syscfg.defs:
     DEVICE_ID:
         description: >
             Device ID
-        value: ((uint16_t){0x6001})
+        value: ((uint16_t){0xDEC0})
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
