--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -17,6 +17,7 @@ syscfg.vals:
     DW1000_BIAS_CORRECTION_ENABLED: 0
     DW1000_PAN: 0
     HARDFLOAT: 0
+    TDMA_NSLOTS: 256
     
 syscfg.defs:
     DEVICE_ID:
