--- a/apps/lwip_p2p_rx/pkg.yml
+++ b/apps/lwip_p2p_rx/pkg.yml
@@ -33,7 +33,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
-
+    - "@mynewt-dw1000-core/lib/lwip"
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
