--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -3,17 +3,13 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    DW1000_SS_TWR_ENABLED: 1
-    DW1000_DS_TWR_ENABLED: 1
-    DW1000_DS_TWR_EXT_ENABLED: 1
-    DW1000_CCP_ENABLED: 1
     CLOCK_CALIBRATION_ENABLED: 0
     TIMESCALE_PROCESSING_ENABLED: 0
     ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     DW1000_PAN: 0
-    TDMA_NSLOTS: 256
+    TDMA_NSLOTS: 128
  
 syscfg.defs:
     DEVICE_ID:
@@ -24,3 +20,7 @@ syscfg.defs:
         description: >
             Clock Master UUID
         value: ((uint64_t){0x8000})  
+    PANID:
+        description: >
+           PANID
+        value: ((uint16_t){0xDECA}) 
