--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -7,9 +7,6 @@ syscfg.vals:
     DW1000_DEVICE_0: 1
     OS_SYSVIEW: 0 
     FLOAT_USER: 0
-    DW1000_SS_TWR_ENABLED: 1
-    DW1000_DS_TWR_ENABLED: 1
-    DW1000_DS_TWR_EXT_ENABLED: 1
     CLOCK_CALIBRATION_ENABLED: 1
     TIMESCALE_PROCESSING_ENABLED: 1
     ADAPTIVE_TIMESCALE_ENABLED: 1
@@ -17,15 +14,16 @@ syscfg.vals:
     DW1000_BIAS_CORRECTION_ENABLED: 0
     DW1000_PAN: 0
     HARDFLOAT: 0
-    TDMA_NSLOTS: 256
+    TDMA_NSLOTS: 128
     
 syscfg.defs:
     DEVICE_ID:
-        description: >
-            Device ID
+        description: Device ID
         value: ((uint16_t){0x1234}) 
     UUID_CCP_MASTER:
-        description: >
-            Clock Master UUID
+        description: Clock Master UUID
         value: ((uint64_t){0x8000}) 
+    PANID:
+        description: PANID
+        value: ((uint16_t){0xDECA}) 
     
