--- a/apps/lwip_ping_rx/pkg.yml
+++ b/apps/lwip_ping_rx/pkg.yml
@@ -32,6 +32,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@mynewt-dw1000-core/lib/lwip"
     - "@mynewt-dw1000-core/net/ip/lwip_base"
 
 pkg.cflags:
