--- a/apps/lwip_ping_tx/pkg.yml
+++ b/apps/lwip_ping_tx/pkg.yml
@@ -34,7 +34,7 @@ pkg.deps:
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/net/ip/lwip_base"
-
+    - "@mynewt-dw1000-core/lib/lwip"
 
 pkg.cflags:
     - "-std=gnu99"
