--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -1,6 +1,8 @@
 syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 0
+    CONSOLE_UART_BAUD: '9600' 
+    CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
