--- a/apps/depreciated/clock_master/pkg.yml
+++ b/apps/depreciated/clock_master/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: apps/clock_master
+pkg.name: apps/depreciated/clock_master
 pkg.type: app
 pkg.description: "Clock master example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
@@ -30,7 +30,7 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/sys/console/full" 
+    - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
@@ -41,7 +41,7 @@ pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
     - "-DNRF52"
-    
+
 pkg.lflags:
     - "-lm"
-    
+
