--- a/apps/depreciated/twr_node_mac/pkg.yml
+++ b/apps/depreciated/twr_node_mac/pkg.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: apps/twr_node_mac
+pkg.name: apps/depreciated/twr_node_mac
 pkg.type: app
 pkg.description: "Basic TWR node example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
