--- a/apps/depreciated/twr_node_range/pkg.yml
+++ b/apps/depreciated/twr_node_range/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: apps/twr_node_range
+pkg.name: apps/depreciated/twr_node_range
 pkg.type: app
 pkg.description: "Basic TWR node ranging example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
@@ -29,7 +29,7 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/sys/console/full" 
+    - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
