--- a/apps/node_provision/pkg.yml
+++ b/apps/node_provision/pkg.yml
@@ -33,7 +33,10 @@ pkg.deps:
     - "@apache-mynewt-core/sys/shell"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@apache-mynewt-core/encoding/json"
-    - "@mynewt-dw1000-core/net/ip/lwip_base"
+    - "@mynewt-dw1000-core/lib/provision"
+    - "@mynewt-dw1000-core/lib/rng"
+
+pkg.deps.PAN_ENABLED:
     - "@mynewt-dw1000-core/lib/pan"
 
 pkg.cflags:
