--- a/apps/node_mesh/syscfg.yml
+++ b/apps/node_mesh/syscfg.yml
@@ -1,11 +1,10 @@
 syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 0
+    CONSOLE_UART_BAUD: '9600' 
+    CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    CLOCK_CALIBRATION_ENABLED: 0
-    TIMESCALE_PROCESSING_ENABLED: 0
-    ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     TDMA_NSLOTS: 50
