--- a/apps/tag_provision/pkg.yml
+++ b/apps/tag_provision/pkg.yml
@@ -19,7 +19,7 @@
 
 pkg.name: apps/tag_provision
 pkg.type: app
-pkg.description: "Basic TWR tag example"
+pkg.description: "Basic Provision example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
@@ -36,8 +36,9 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/provision"
     - "@mynewt-dw1000-core/lib/rng"
 
-pkg.deps.PAN_ENABLED:
+pkg.deps.INCLUDE_PAN_LIB:
     - "@mynewt-dw1000-core/lib/pan"
+
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
