--- a/apps/twr_node_nranges_tdma/pkg.yml
+++ b/apps/twr_node_nranges_tdma/pkg.yml
@@ -19,23 +19,31 @@
 
 pkg.name: apps/twr_node_nranges_tdma
 pkg.type: app
-pkg.description: "Basic TWR tag example"
+pkg.description: "Basic reverse superres anchor node"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - dw1000
-  - twr
+  - superres
 
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@mynewt-dw1000-core/lib/nranges"
+    - "@mynewt-dw1000-core/lib/twr_ss_nrng"
+    - "@mynewt-dw1000-core/lib/dsp"
+    - "@mynewt-dw1000-core/lib/tdma"
+    - "@mynewt-dw1000-core/lib/ccp"
+    - "@mynewt-timescale-lib/lib/timescale"
 
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
+    - "-DNRF52"
 
 pkg.lflags:
     - "-lm"
