--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -3,12 +3,14 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    DW1000_SS_TWR_ENABLED: 0
-    DW1000_DS_TWR_ENABLED: 1
-    DW1000_DS_TWR_EXT_ENABLED: 0
-    DW1000_CLOCK_CALIBRATION: 0
-    DW1000_PAN: 0
-
+    CLOCK_CALIBRATION_ENABLED: 0
+    TIMESCALE_PROCESSING_ENABLED: 0
+    ADAPTIVE_TIMESCALE_ENABLED: 0
+    FS_XTALT_AUTOTUNE_ENABLED: 0
+    DW1000_BIAS_CORRECTION_ENABLED: 0
+    TDMA_NSLOTS: 10
+    NRNG_DEVICE_TYPE: 1
+    HARDFLOAT: 1
 syscfg.defs:
     DEVICE_ID:
         description: >
@@ -18,11 +20,9 @@ syscfg.defs:
         description: >
             Clock Master UUID
         value: ((uint16_t){0x8000})
-    N_RANGES_NPLUS_TWO_MSGS:
-        description: >
-            To enable/disable the 2n+2ranges method
-        value: 1
     SLOT_ID:
         description: >
             SLOT_ID for the Device
         value: 1
+    PANID:
+        value: 0xDECA
