--- a/apps/twr_node_nranges_tdma/pkg.yml
+++ b/apps/twr_node_nranges_tdma/pkg.yml
@@ -35,6 +35,8 @@ pkg.deps:
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@mynewt-dw1000-core/lib/nranges"
     - "@mynewt-dw1000-core/lib/twr_ss_nrng"
+    - "@mynewt-dw1000-core/lib/twr_ds_nrng"
+    - "@mynewt-dw1000-core/lib/twr_ds_ext_nrng"
     - "@mynewt-dw1000-core/lib/dsp"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
