--- a/apps/twr_tag/syscfg.yml
+++ b/apps/twr_tag/syscfg.yml
@@ -3,12 +3,4 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-
-syscfg.defs:
-    DEVICE_ID:
-        description: Device ID
-        value: ((uint16_t){0x4321})  
-    PANID:
-        description: PANID
-        value: ((uint16_t){0xDECA})         
-      
+    DEVICE_ID: ((uint16_t){0x4321})
