--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -13,12 +13,9 @@ syscfg.vals:
     #N-frames should be atleast nnodes*2
     NRNG_NFRAMES: 8
     NRNG_DEVICE_TYPE: 0
+    DEVICE_ID: ((uint16_t){0xAAAA})
     
 syscfg.defs:
-    DEVICE_ID:
-        description: >
-            Device ID
-        value: ((uint16_t){0xAAAA})
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
@@ -39,7 +36,4 @@ syscfg.defs:
         description: >
             Slot ID till which the nodes should respond
         value: 7
-    PANID:
-        description: PANID
-        value: ((uint16_t){0xDECA})
     
