--- a/apps/node_mesh/syscfg.yml
+++ b/apps/node_mesh/syscfg.yml
@@ -36,17 +36,10 @@ syscfg.vals:
     BLE_MESH_DEBUG_LOW_POWER: 1
     BLE_MESH_DEBUG_FRIEND: 1
     BLE_MESH_DEBUG_PROXY: 1
+    DEVICE_ID: ((uint16_t){0x4321})
     
 syscfg.defs:
-    DEVICE_ID:
-        description: >
-            Device ID
-        value: ((uint16_t){0x4321}) 
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
         value: ((uint64_t){0x8000})  
-    PANID:
-        description: >
-           PANID
-        value: ((uint16_t){0xDECA}) 
