--- a/apps/twr_node_tdma_ota_ble/syscfg.yml
+++ b/apps/twr_node_tdma_ota_ble/syscfg.yml
@@ -19,6 +19,8 @@ syscfg.vals:
     REBOOT_LOG_FCB: 1
     LOG_FCB: 1
     CONFIG_FCB: 1
+    SHELL_TASK: 1
+    CONFIG_CLI: 1
 
     # Enable newtmgr commands.
     STATS_NEWTMGR: 1
@@ -33,17 +35,12 @@ syscfg.vals:
     MSYS_1_BLOCK_COUNT: 22
     MSYS_1_BLOCK_SIZE: 110
 
+    DEVICE_ID: ((uint16_t){0x4321})
     
 syscfg.defs:
-    DEVICE_ID:
-        description: Device ID
-        value: ((uint16_t){0x4321}) 
     UUID_CCP_MASTER:
         description: Clock Master UUID
         value: ((uint64_t){0x8000}) 
-    PANID:
-        description: PANID
-        value: ((uint16_t){0xDECA}) 
 
     BLEPRPH_LE_PHY_SUPPORT:
         description: >
