--- a/apps/tag_provision/syscfg.yml
+++ b/apps/tag_provision/syscfg.yml
@@ -7,21 +7,16 @@ syscfg.vals:
     SHELL_TASK: 0
     PROVISION_ENABLED: 1
     INCLUDE_PAN_LIB: 0
+    DEVICE_ID: ((uint16_t){0x4321})
 
 syscfg.defs:
     SLOT_ID:
         value: 0
     DEVICE_TYPE:
         value: 2
-    DEVICE_ID:
-        description: Device ID
-        value: ((uint16_t){0x4321})
     UUID_CCP_MASTER:
         description: Clock Master UUID
         value: ((uint64_t){0x8000})
-    PANID:
-        description: PANID
-        value: ((uint16_t){0xDECA})
     INCLUDE_PAN_LIB:
         description: Enable to add the pan library to the app.
         value: 1
