Modified working examples in keeping with API changes in core

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -9,6 +9,9 @@ syscfg.vals:
     DW1000_BIAS_CORRECTION_ENABLED: 0
     TDMA_NSLOTS: 128
     DEVICE_ID: ((uint16_t){0x4321})
+    CCP_VERBOSE: 0
+    STATS_NAMES: 1
+    STATS_CLI: 1
  
 syscfg.defs:
     UUID_CCP_MASTER:
