--- a/apps/twr_node_tdma/pkg.yml
+++ b/apps/twr_node_tdma/pkg.yml
@@ -31,6 +31,7 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@mynewt-dw1000-core/lib/dsp"
@@ -39,11 +40,13 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/twr_ss"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
+#    - "@mynewt-dw1000-core/sys/uwbcfg"
 
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
     - "-DNRF52"
+    - "-Wno-strict-aliasing"
 
 pkg.lflags:
     - "-lm"
