--- a/apps/twr_tag_tdma/pkg.yml
+++ b/apps/twr_tag_tdma/pkg.yml
@@ -30,6 +30,7 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@mynewt-dw1000-core/lib/tdma"
@@ -44,6 +45,7 @@ pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
     - "-DNRF52"
+    - "-Wno-strict-aliasing"
 
 pkg.lflags:
     - "-lm"
