--- a/apps/twr_tag_tdma_ota_ble/syscfg.yml
+++ b/apps/twr_tag_tdma_ota_ble/syscfg.yml
@@ -1,16 +1,18 @@
 syscfg.vals:
     # Route console to RTT
-    CONSOLE_UART: 1
+    CONSOLE_UART: 0
     CONSOLE_UART_BAUD: '1000000' 
     CONSOLE_UART_TX_BUF_SIZE: '1024'
-    CONSOLE_RTT: 0
+    CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
     OS_SYSVIEW: 0 
     FLOAT_USER: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
-    TDMA_NSLOTS: 3
+    TDMA_NSLOTS: 16
+    STATS_NAMES: 1
+    STATS_CLI: 1
 
     # Disable central and observer roles.
     BLE_ROLE_BROADCASTER: 1
