--- a/apps/twr_node_tdma_ota_ble/pkg.yml
+++ b/apps/twr_node_tdma_ota_ble/pkg.yml
@@ -40,6 +40,7 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/dsp"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
+    - "@mynewt-dw1000-core/lib/rng"
     - "@mynewt-dw1000-core/lib/twr_ss"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
@@ -64,6 +65,7 @@ pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
     - "-DNRF52"
+    - "-Wno-strict-aliasing"
 
 pkg.lflags:
     - "-lm"
