--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -12,6 +12,9 @@ syscfg.vals:
     NRNG_DEVICE_TYPE: 1
     HARDFLOAT: 1
     DEVICE_ID: ((uint16_t){0x2222})
+    STATS_NAMES: 1
+    STATS_CLI: 1
+    
 
 syscfg.defs:
     UUID_CCP_MASTER:
