--- a/apps/twr_node_tdma/pkg.yml
+++ b/apps/twr_node_tdma/pkg.yml
@@ -40,8 +40,17 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/twr_ss"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
-#    - "@mynewt-dw1000-core/sys/uwbcfg"
+    - "@mynewt-dw1000-core/sys/uwbcfg"   
+    - "@apache-mynewt-core/boot/split"
+    - "@apache-mynewt-core/boot/bootutil"
+    - "@apache-mynewt-core/kernel/os"
+    - "@apache-mynewt-core/mgmt/imgmgr"
+    - "@apache-mynewt-core/mgmt/newtmgr"
+    - "@apache-mynewt-core/mgmt/newtmgr/transport/nmgr_shell"
+    - "@apache-mynewt-core/sys/log/full"
+    - "@apache-mynewt-core/sys/log/modlog"
 
+ 
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
