--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -12,7 +12,14 @@ syscfg.vals:
     CCP_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
- 
+    CONFIG_CLI: 1
+    DW1000_CLI: 1
+
+    # Enable newtmgr commands.
+    STATS_NEWTMGR: 1
+    LOG_NEWTMGR: 1
+    CONFIG_NEWTMGR: 1
+
 syscfg.defs:
     UUID_CCP_MASTER:
         description: >
