--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -13,6 +13,14 @@ syscfg.vals:
     RNG_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
+    CONFIG_CLI: 1
+    DW1000_CLI: 1
+
+    # Enable newtmgr commands.
+    STATS_NEWTMGR: 1
+    LOG_NEWTMGR: 1
+    CONFIG_NEWTMGR: 1
+
     DEVICE_ID: ((uint16_t){0x1234})
 syscfg.defs:
     UUID_CCP_MASTER:
