Moved some of the redundant apps to deprecated folder Restructured nranges application to work with 128 slots for 4 nodes y

--- a/apps/depreciated/lwip_p2p_tx/pkg.yml
+++ b/apps/depreciated/lwip_p2p_tx/pkg.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: apps/lwip_p2p_tx
+pkg.name: apps/depreciated/lwip_p2p_tx
 pkg.type: app
 pkg.description: "Basic TWR Transmit Example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
