--- a/apps/depreciated/node_mesh/pkg.yml
+++ b/apps/depreciated/node_mesh/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-#
+# 
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -17,30 +17,41 @@
 # under the License.
 #
 
-pkg.name: apps/pan_master
+pkg.name: apps/depreciated/node_mesh
 pkg.type: app
-pkg.description: "Personal area network master example"
+pkg.description: "Basic reverse superres anchor node"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - dw1000
-  - twr
-  - ccp
-  - pan
+  - superres
 
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/sys/console/full"
+    - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
-    - "@mynewt-dw1000-core/lib/pan"
+    - "@mynewt-dw1000-core/lib/dsp"
+    - "@mynewt-dw1000-core/lib/tdma"
+    - "@mynewt-dw1000-core/lib/ccp"
+    - "@mynewt-dw1000-core/lib/twr_ss"
+    - "@mynewt-dw1000-core/lib/twr_ds"
+    - "@mynewt-dw1000-core/lib/twr_ds_ext"
+    - "@apache-mynewt-nimble/nimble/controller"
+    - "@apache-mynewt-nimble/nimble/host"
+    - "@apache-mynewt-nimble/nimble/host/services/gap"
+    - "@apache-mynewt-nimble/nimble/host/services/gatt"
+    - "@apache-mynewt-nimble/nimble/host/store/ram"
+    - "@apache-mynewt-nimble/nimble/transport/ram"
+    - "@apache-mynewt-core/sys/log/full"
+    - "@apache-mynewt-core/sys/stats/full"
 
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
+    - "-DNRF52"
 
 pkg.lflags:
     - "-lm"
-
