--- a/apps/loopback/pkg.yml
+++ b/apps/loopback/pkg.yml
@@ -17,13 +17,14 @@
 # under the License.
 #
 
-pkg.name: apps/twr_node_tdma
+pkg.name: apps/loopback
 pkg.type: app
-pkg.description: "Basic reverse superres anchor node"
+pkg.description: "DWM1002 Loopback"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - dw1000
+  - Loopback
 
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
@@ -36,10 +37,13 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/dsp"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
+    - "@mynewt-dw1000-core/lib/wcs"
+    - "@mynewt-timescale-lib/lib/timescale"
     - "@mynewt-dw1000-core/lib/twr_ss"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
-    - "@mynewt-dw1000-core/sys/uwbcfg"   
+    - "@mynewt-dw1000-core/lib/cir"
+    - "@mynewt-dw1000-core/sys/uwbcfg"  
     - "@apache-mynewt-core/boot/split"
     - "@apache-mynewt-core/boot/bootutil"
     - "@apache-mynewt-core/kernel/os"
@@ -48,13 +52,12 @@ pkg.deps:
     - "@apache-mynewt-core/mgmt/newtmgr/transport/nmgr_shell"
     - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/sys/log/modlog"
-
  
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
-    - "-DNRF52"
-    - "-Wno-strict-aliasing"
-
+    - "-DNRF52840_XXAA"
+    
 pkg.lflags:
     - "-lm"
+    
