--- a/apps/twr_tag_nranges_tdma/pkg.yml
+++ b/apps/twr_tag_nranges_tdma/pkg.yml
@@ -39,8 +39,8 @@ pkg.deps:
     - "@mynewt-timescale-lib/lib/timescale"
     - "@mynewt-dw1000-core/lib/nranges"
     - "@mynewt-dw1000-core/lib/twr_ss_nrng"
-    - "@mynewt-dw1000-core/lib/twr_ds_nrng"
-    - "@mynewt-dw1000-core/lib/twr_ds_ext_nrng"
+#    - "@mynewt-dw1000-core/lib/twr_ds_nrng"
+#    - "@mynewt-dw1000-core/lib/twr_ds_ext_nrng"
     - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/sys/log/modlog"
 pkg.cflags:
