Added synchronous pan to tdma node and tag.

--- a/apps/twr_node_tdma/pkg.yml
+++ b/apps/twr_node_tdma/pkg.yml
@@ -36,6 +36,7 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/dsp"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
+    - "@mynewt-dw1000-core/lib/pan"
     - "@mynewt-dw1000-core/lib/twr_ss"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
