--- a/apps/listener/pkg.yml
+++ b/apps/listener/pkg.yml
@@ -34,6 +34,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/sys/config"
     - "@mynewt-dw1000-core/sys/uwbcfg"
+    - "@mynewt-dw1000-core/lib/cir"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
 
 pkg.deps.BLE_ENABLED:
