--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -10,7 +10,7 @@ syscfg.defs:
         value: 136
     CIR_NUM_SAMPLES:
         description: 'Number of of CIR accumulator samples to show, 0=none'
-        value: '"0"'
+        value: '"0"'      
         
 syscfg.vals:
     # Route console to UART
@@ -32,6 +32,10 @@ syscfg.vals:
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
     UWBCFG_APPLY_AT_INIT: 1
+    CIR_ENABLED: 1
+    CIR_VERBOSE: 0
+    CIR_OFFSET: 3
+    CIR_SIZE: 12
 
     ## Where to store config 
     CONFIG_FCB: 1
