Added PMEM handler

--- a/apps/loopback/syscfg.yml
+++ b/apps/loopback/syscfg.yml
@@ -7,13 +7,15 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
-    TDMA_NSLOTS: 64
+    TDMA_NSLOTS: 16
     STATS_CLI: 1
     STATS_NAMES: 1
     DW1000_CLI: 1
     WCS_VERBOSE: 1
     CIR_VERBOSE: 1    
     CIR_SIZE: 16
+#    PMEM_VERBOSE: 1    
+#    PMEM_SIZE: 256
 
     TWR_DS_TX_HOLDOFF: ((uint32_t){0x0500})
     TWR_SS_TX_HOLDOFF: ((uint32_t){0x0500})
