--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -16,14 +16,15 @@ syscfg.vals:
     STATS_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
-    SHELL_TASK: 1
-
+    CIR_VERBOSE: 1    
+    CIR_SIZE: 8
+    CIR_OFFSET: 2
     # Enable newtmgr commands.
     STATS_NEWTMGR: 1
     LOG_NEWTMGR: 1
     CONFIG_NEWTMGR: 1
 
-    DEVICE_ID: ((uint16_t){0x1234})
+#    DEVICE_ID: ((uint16_t){0x1234})
 syscfg.defs:
     UUID_CCP_MASTER:
         description: Clock Master UUID
