Refactored nranges in keeping with bottleneck

--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -2,19 +2,22 @@ syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
+    CONSOLE_UART_BAUD: 115200
+    CONSOLE_UART_TX_BUF_SIZE: '1024'
     DW1000_DEVICE_0: 1
     CLOCK_CALIBRATION_ENABLED: 0
     TIMESCALE_PROCESSING_ENABLED: 0
     ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
-    TDMA_NSLOTS: 16
+    TDMA_NSLOTS: 128
     NRNG_DEVICE_TYPE: 1
     HARDFLOAT: 1
     DEVICE_ID: ((uint16_t){0x2222})
     STATS_NAMES: 1
     STATS_CLI: 1
-    
+    WCS_VERBOSE: 1
+    NRNG_VERBOSE: 0
 
 syscfg.defs:
     UUID_CCP_MASTER:
