--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -8,7 +8,7 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
-    TDMA_NSLOTS: 16
+    TDMA_NSLOTS: 128
     NRNG_NNODES: 4
     #N-frames should be atleast nnodes*2
     NRNG_NFRAMES: 8
@@ -17,6 +17,11 @@ syscfg.vals:
     DEVICE_ID: ((uint16_t){0xAAAA})
     STATS_NAMES: 1
     STATS_CLI: 1
+    CIR_VERBOSE: 0    
+    CIR_SIZE: 8
+    CIR_OFFSET: 2
+    WCS_VERBOSE: 1
+    NRNG_VERBOSE: 1
     
 syscfg.defs:
     UUID_CCP_MASTER:
