--- a/apps/pan_master/pkg.yml
+++ b/apps/pan_master/pkg.yml
@@ -33,7 +33,9 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/encoding/json"
+    - "@apache-mynewt-core/mgmt/newtmgr"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@mynewt-dw1000-core/lib/pan"
 
