--- a/apps/twr_tag_nranges_tdma/pkg.yml
+++ b/apps/twr_tag_nranges_tdma/pkg.yml
@@ -44,6 +44,7 @@ pkg.deps:
 #    - "@mynewt-dw1000-core/lib/twr_ds_ext_nrng"
     - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/sys/log/modlog"
+    - "@mynewt-dw1000-core/sys/uwbcfg"   
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
