--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -17,6 +17,9 @@ syscfg.vals:
     DEVICE_ID: ((uint16_t){0xAAAA})
     STATS_NAMES: 1
     STATS_CLI: 1
+    CONFIG_CLI: 1
+    DW1000_CLI: 1
+    SHELL_TASK: 1
     CIR_VERBOSE: 0    
     CIR_SIZE: 8
     CIR_OFFSET: 2
