--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -10,7 +10,7 @@ syscfg.vals:
     ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
-    TDMA_NSLOTS: 64
+    TDMA_NSLOTS: 160
     NRNG_DEVICE_TYPE: 1
     HARDFLOAT: 1
     DEVICE_ID: ((uint16_t){0x2222})
@@ -18,6 +18,7 @@ syscfg.vals:
     STATS_CLI: 1
     WCS_VERBOSE: 1
     NRNG_VERBOSE: 0
+    TDMA_SANITY_INTERVAL: 10
 
 syscfg.defs:
     UUID_CCP_MASTER:
