Touched twr_node/tag with code API changes

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -9,6 +9,7 @@ syscfg.vals:
     DW1000_BIAS_CORRECTION_ENABLED: 0
     PAN_ENABLED: 1
     TDMA_NSLOTS: 160
+    RNG_VERBOSE: 0
     CCP_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
