--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -13,7 +13,7 @@ syscfg.vals:
     TDMA_NSLOTS: 160
     NRNG_DEVICE_TYPE: 1
     HARDFLOAT: 1
-    DEVICE_ID: ((uint16_t){0x2222})
+    DEVICE_ID: ((uint16_t)0x2222)
     STATS_NAMES: 1
     STATS_CLI: 1
     WCS_VERBOSE: 1
@@ -24,7 +24,7 @@ syscfg.defs:
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
-        value: ((uint16_t){0x8000})
+        value: ((uint16_t)0x8000)
     SLOT_ID:
         description: >
             SLOT_ID for the Device
