--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -8,30 +8,29 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
-    TDMA_NSLOTS: 160
+    TDMA_NSLOTS: 64
     NRNG_NNODES: 4
     #N-frames should be atleast nnodes*2
     NRNG_NFRAMES: 8
     #Device_type (0 -> tag, 1 -> node)
     NRNG_DEVICE_TYPE: 0
-    DEVICE_ID: ((uint16_t)0xAAAA)
+    DEVICE_ID: ((uint16_t){0xAAAA})
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
     SHELL_TASK: 1
-    CIR_VERBOSE: 1    
+    CIR_VERBOSE: 0    
     CIR_SIZE: 8
     CIR_OFFSET: 2
     WCS_VERBOSE: 1
-    NRNG_VERBOSE: 1
-    TDMA_SANITY_INTERVAL: 10
+    NRNG_VERBOSE: 0
     
 syscfg.defs:
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
-        value: ((uint16_t)0x8000)
+        value: ((uint16_t){0x8000})
     NODE_START_SLOT_ID:
         description: >
             Slot ID from which the nodes should respond
