Now using panmaster lib and expiring leases for the tag clients. OBS: changes not verified in hw yet

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -7,7 +7,6 @@ syscfg.vals:
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
-    PAN_ENABLED: 1
     TDMA_NSLOTS: 160
     RNG_VERBOSE: 0
     CCP_VERBOSE: 0
@@ -21,6 +20,20 @@ syscfg.vals:
     STATS_NEWTMGR: 1
     LOG_NEWTMGR: 1
     CONFIG_NEWTMGR: 1
+
+    ## Pan
+    PAN_ENABLED: 1
+    PAN_RX_TIMEOUT: ((uint16_t){4000})
+    PAN_LEASE_TIME: 600
+    PAN_LEASE_EXP_MARGIN: 30500
+
+    ## Panmaster
+    PANMASTER_FCB: 1
+    PANMASTER_FCB_FLASH_AREA: FLASH_AREA_NFFS
+    PANMASTER_NFFS: 0
+    PANMASTER_MAXNUM_NODES: 32
+    PANMASTER_DEFAULT_PANID: '"0xDECA"'
+    PANMASTER_CLI: 1
 
 syscfg.defs:
     UUID_CCP_MASTER:
