--- a/apps/twr_tag_tdma_ota_ble/syscfg.yml
+++ b/apps/twr_tag_tdma_ota_ble/syscfg.yml
@@ -5,12 +5,11 @@ syscfg.vals:
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    OS_SYSVIEW: 0 
-    FLOAT_USER: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
-    TDMA_NSLOTS: 128
+    TDMA_NSLOTS: 160
+    WCS_VERBOSE: 1
     STATS_NAMES: 1
     STATS_CLI: 1
 
