Resolve merge conflict

--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -3,7 +3,7 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     CONSOLE_UART_BAUD: 115200
-    CONSOLE_UART_TX_BUF_SIZE: '1024'
+    CONSOLE_UART_TX_BUF_SIZE: 1024
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
@@ -19,7 +19,7 @@ syscfg.vals:
     WCS_VERBOSE: 1
     SURVEY_VERBOSE: 1
     NRNG_VERBOSE: 0
-    TDMA_SANITY_INTERVAL: 0
+    TDMA_SANITY_INTERVAL: 10
 
 syscfg.defs:
     UUID_CCP_MASTER:
