--- a/apps/depreciated/twr_node_mac/syscfg.yml
+++ b/apps/depreciated/twr_node_mac/syscfg.yml
@@ -9,12 +9,8 @@ syscfg.vals:
     DW1000_CCP_ENABLED: 0
     DW1000_PAN: 0
     DW1000_MAC_FILTERING: 1
-    
+    DW1000_DEVICE_ID_0: ((uint16_t){0x1234})
 syscfg.defs:
-    DEVICE_ID:
-        description: >
-            Device ID
-        value: ((uint16_t){0x1234})
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
