--- a/apps/depreciated/twr_tag_mac/syscfg.yml
+++ b/apps/depreciated/twr_tag_mac/syscfg.yml
@@ -10,12 +10,8 @@ syscfg.vals:
     DW1000_PAN: 1
     DW1000_MAC_FILTERING: 1
     # OS_SYSVIEW: 1
-
+    DW1000_DEVICE_ID_0: ((uint16_t){0x4321})
 syscfg.defs:
-    DEVICE_ID:
-        description: >
-            Device ID
-        value: ((uint16_t){0x4321})
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
