--- a/apps/node_mesh/syscfg.yml
+++ b/apps/node_mesh/syscfg.yml
@@ -8,7 +8,7 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     TDMA_NSLOTS: 50
-    DEVICE_ID: ((uint16_t){0x4321})
+    DW1000_DEVICE_ID_0: ((uint16_t){0x4321})
     CCP_VERBOSE: 0
     STATS_NAMES: 0
     STATS_CLI: 0
