--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -29,7 +29,7 @@ syscfg.vals:
     PAN_LEASE_TIME: 600
     PAN_LEASE_EXP_MARGIN: 30500
 
-#    DEVICE_ID: ((uint16_t){0x1234})
+#    DW1000_DEVICE_ID_0: ((uint16_t){0x1234})
 syscfg.defs:
     UUID_CCP_MASTER:
         description: Clock Master UUID
