--- a/apps/twr_tag_nranges_tdma/pkg.yml
+++ b/apps/twr_tag_nranges_tdma/pkg.yml
@@ -31,8 +31,11 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/mgmt/imgmgr"
+    - "@apache-mynewt-core/mgmt/newtmgr"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@mynewt-dw1000-core/lib/pan"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
     - "@mynewt-dw1000-core/lib/cir"
