--- a/apps/twr_node_nranges_tdma/pkg.yml
+++ b/apps/twr_node_nranges_tdma/pkg.yml
@@ -30,10 +30,14 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/encoding/json"
+    - "@apache-mynewt-core/mgmt/imgmgr"
+    - "@apache-mynewt-core/mgmt/newtmgr"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@mynewt-dw1000-core/lib/twr_ss_nrng"
     - "@mynewt-dw1000-core/sys/uwbcfg"   
+    - "@mynewt-dw1000-core/lib/pan"
     - "@mynewt-dw1000-core/lib/dsp"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
@@ -41,10 +45,12 @@ pkg.deps:
     - "@mynewt-timescale-lib/lib/timescale"
     - "@mynewt-dw1000-core/lib/survey"
 
+pkg.deps.PANMASTER_ISSUER:
+    - "@mynewt-dw1000-core/lib/panmaster"
+
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
-    - "-DNRF52"
 
 pkg.lflags:
     - "-lm"
