--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -10,11 +10,11 @@ syscfg.vals:
     HARDFLOAT: 1
     TDMA_NSLOTS: 64
     NRNG_NNODES: 4
+    NRNG_NTAGS: 2
     #N-frames should be atleast nnodes*2
     NRNG_NFRAMES: 8
     #Device_type (0 -> tag, 1 -> node)
     NRNG_DEVICE_TYPE: 0
-    DEVICE_ID: ((uint16_t){0xAAAA})
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
@@ -26,12 +26,14 @@ syscfg.vals:
     WCS_VERBOSE: 1
     NRNG_VERBOSE: 1
     TDMA_SANITY_INTERVAL: 0
+
+    # Pan related paramters, lease in s, lease exp margin in ms
+    PAN_ENABLED: 1
+    PAN_RX_TIMEOUT: ((uint16_t){4000})
+    PAN_LEASE_TIME: 3600
+    PAN_LEASE_EXP_MARGIN: 60000
     
 syscfg.defs:
-    UUID_CCP_MASTER:
-        description: >
-            Clock Master UUID
-        value: ((uint16_t){0x8000})
     NODE_START_SLOT_ID:
         description: >
             Slot ID from which the nodes should respond
