Made CIR possible to enable/disable through syscfg

--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -34,11 +34,12 @@ syscfg.vals:
     
     # Enable DW1000
     DW1000_DEVICE_0: 1
+    DW1000_DEVICE_1: 0
     DW1000_SS_TWR_ENABLED: 0
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
     UWBCFG_APPLY_AT_INIT: 1
-    CIR_ENABLED: 1
+    CIR_ENABLED: 0
     CIR_VERBOSE: 0
     CIR_OFFSET: 6
     CIR_SIZE: 16
