--- a/apps/listener/pkg.yml
+++ b/apps/listener/pkg.yml
@@ -34,8 +34,11 @@ pkg.deps:
     - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/sys/config"
     - "@mynewt-dw1000-core/sys/uwbcfg"
-    - "@mynewt-dw1000-core/lib/cir"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+
+pkg.deps.CIR_ENABLED:
+    - "@mynewt-dw1000-core/lib/cir"
+
 
 pkg.deps.BLE_ENABLED:
     - "@apache-mynewt-core/mgmt/newtmgr/transport/ble"
