Added readme for listener. Tested examples for dwm1001 and dwm1002

--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -9,8 +9,13 @@ syscfg.defs:
         description: 'Size of each message buffer'
         value: 136
     CIR_NUM_SAMPLES:
-        description: 'Number of of CIR accumulator samples to show, 0=none'
-        value: '"0"'      
+        description: 'Default number of of CIR accumulator samples to show, 0=none. Change in console with config command.'
+        value: '"0"'
+    USE_DBLBUFFER:
+        description: 'Enable doublebuffer or not'
+        value: 1
+        restrictions:
+          - '!CIR_ENABLED'
         
 syscfg.vals:
     # Route console to UART
