Reworking twr_node/tag_nranges_tdma into a single firmware

--- a/apps/twr_node_nranges_tdma/pkg.yml
+++ b/apps/twr_node_nranges_tdma/pkg.yml
@@ -44,8 +44,8 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/wcs"
     - "@mynewt-timescale-lib/lib/timescale"
     - "@mynewt-dw1000-core/lib/survey"
-
-pkg.deps.PANMASTER_ISSUER:
+    - "@mynewt-dw1000-core/lib/nmgr_uwb"
+    - "@mynewt-dw1000-core/mgmt/bcast_ota"
     - "@mynewt-dw1000-core/lib/panmaster"
 
 pkg.cflags:
