--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -4,6 +4,8 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '1000000'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
+    CONSOLE_HISTORY_SIZE: 8
+
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
@@ -17,6 +19,7 @@ syscfg.vals:
     NRNG_DEVICE_TYPE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
+    IMGMGR_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
     SHELL_TASK: 1
