--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -1,9 +1,15 @@
 syscfg.vals:
     # Route console to RTT
-    CONSOLE_UART: 0
-    CONSOLE_RTT: 1
+    CONSOLE_UART: 1
+    CONSOLE_RTT: 0
     CONSOLE_UART_BAUD: 115200
     CONSOLE_UART_TX_BUF_SIZE: 1024
+    CONSOLE_HISTORY_SIZE: 8
+
+    LOG_LEVEL: 0
+    
+    CONFIG_FCB: 1
+    
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
@@ -14,12 +20,18 @@ syscfg.vals:
     STATS_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
+    BCAST_OTA_CLI: 1
+    IMGMGR_CLI: 1
     SHELL_TASK: 1
     WCS_VERBOSE: 1
     SURVEY_VERBOSE: 1
     NRNG_VERBOSE: 0
     TDMA_SANITY_INTERVAL: 10
+    OS_LATENCY: 1000
 
+    NRNG_VERBOSE: 1
+    NRNG_DEVICE_TYPE: 1
+    
     # Pan related parameters, lease in s, lease exp margin in ms
     PAN_ENABLED: 1
     PAN_RX_TIMEOUT: ((uint16_t){4000})
@@ -37,11 +49,27 @@ syscfg.vals:
 
     SURVEY_RANGE_SLOT: 3
     SURVEY_BROADCAST_SLOT: 4
+
+    # By default we're a tag
+    UWBCFG_DEF_ROLE: '"0x0"'
+    UWBCFG_APPLY_AT_INIT: 1
     
 syscfg.defs:
     PANMASTER_ISSUER:
         description: 'Act as panmaster in the network'
         value: 0
+    NRANGES_ANCHOR:
+        description: 'Act as slave-anchor in the network'
+        value: 0
+    NODE_START_SLOT_ID:
+        description: >
+            Slot ID from which the nodes should respond
+        value: 1
+    NODE_END_SLOT_ID:
+        description: >
+            Slot ID till which the nodes should respond
+        value: 4
+
     CCP_TOF_COMP_LOCATION_X:
         description: 'x-location of this node in relation to the ccp master'
         value: ((float){2.0})
@@ -51,3 +79,10 @@ syscfg.defs:
     CCP_TOF_COMP_LOCATION_Z:
         description: 'z-location of this node in relation to the ccp master'
         value: ((float){0.0})
+
+syscfg.vals.PANMASTER_ISSUER:
+    UWBCFG_DEF_ROLE: '"0x7"'
+
+syscfg.vals.NRANGES_ANCHOR:
+    UWBCFG_DEF_ROLE: '"0x4"'
+    NRNG_DEVICE_TYPE: 1
