--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -1,14 +1,17 @@
 syscfg.vals:
     # Route console to RTT
-    CONSOLE_UART: 0
+    CONSOLE_UART: 1
     CONSOLE_UART_BAUD: '1000000' 
     CONSOLE_UART_TX_BUF_SIZE: '1024'
-    CONSOLE_RTT: 1
+    CONSOLE_RTT: 0
+    CONSOLE_HISTORY_SIZE: 8
+
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
     TDMA_NSLOTS: 160
+    IMGMGR_CLI: 1
     WCS_VERBOSE: 1
     STATS_NAMES: 1
     STATS_CLI: 1
