--- a/apps/lwip_ping_rx/syscfg.yml
+++ b/apps/lwip_ping_rx/syscfg.yml
@@ -3,7 +3,7 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    DEVICE_ID: ((uint16_t){0x4321})
+    DW_DEVICE_ID_0: 0x4321
 
 syscfg.defs:
     DEV_IP6_ADDR_1:
