--- a/apps/ota_uwb_master/syscfg.yml
+++ b/apps/ota_uwb_master/syscfg.yml
@@ -4,11 +4,13 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
+    CONSOLE_HISTORY_SIZE: 8
+    
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     TDMA_NSLOTS: 128
-    DW1000_DEVICE_ID_0: ((uint16_t){0x4321})
+    DW_DEVICE_ID_0: 0x4321
     CCP_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
